codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_configured_server_without_status.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • No MCP tools available.

  • server_only
    • Status: enabled
    • Auth: Unsupported
    • Command: server-only --stdio
    • Tools: (none)
    • Resources: (none)
    • Resource templates: (none)
