codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs: unknown (1 tool)

  Use /mcp verbose for tools and resources.
