codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__portable_image_raw_output.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.raw_lines()).join(\"\\n\")"
---
[Image #1] describe inline image
